# local-meeting-notes

./: .env.example  .gitignore  AGENTS.md  CODEX_TASK_1.md  CODEX_TASK_2.md  CODEX_TASK_3.md  CODEX_TASK_3C.md  CODEX_TASK_4.md  CODEX_TASK_5.md  CODEX_TASK_5B.md  CODEX_TASK_6.md  CODEX_TASK_6C.md  CODEX_TASK_6D.md  CODEX_TASK_7.md  CODEX_TASK_8.md  CODEX_TASK_ACTION_WORKFLOW_2.md  CODEX_TASK_CALENDAR_SESSION_ENRICHMENT.md  CODEX_TASK_EXPORT_FINAL_NOTES_POLISH.md  CODEX_TASK_EXPORT_FINAL_NOTES_PRODUCTION_POLISH.md  CODEX_TASK_LIBRARY_SEARCH_PRODUCTION_POLISH.md  CODEX_TASK_LIVE_CALENDAR_INTEGRATION.md  CODEX_TASK_MEETING_CONTINUITY_AND_BRIEFING.md  CODEX_TASK_PLANNED_MEETINGS_AND_SESSION_CREATION.md  README.md  pytest.ini
.github/workflows/: ci.yml
app/: CODEX_TASK_FINALISATION.md  index.html  package-lock.json  package.json  playwright.config.ts
app/app/: CODEX_TASK_7B.md
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
backend/: README.md  pyproject.toml
backend/data/: local_meeting_notes.db.bak
backend/src/: __init__.py
backend/src/local_meeting_notes/: __init__.py  app.py  bootstrap.py  config.py  logging_config.py  quality_guardrails.py
backend/src/local_meeting_notes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/local_meeting_notes/action_extractor/: __init__.py  providers.py  service.py
backend/src/local_meeting_notes/api/: __init__.py
backend/src/local_meeting_notes/audio_capture/: __init__.py  dependencies.py  models.py  service.py  state.py  worker.py
backend/src/local_meeting_notes/core/: __init__.py  registry.py
backend/src/local_meeting_notes/diarization_engine/: __init__.py  providers.py  service.py
backend/src/local_meeting_notes/export_service/: __init__.py  service.py
backend/src/local_meeting_notes/local_llm/: __init__.py  client.py  transcript_cleaning.py
backend/src/local_meeting_notes/meeting_detector/: __init__.py  service.py
backend/src/local_meeting_notes/microsoft_integration/: __init__.py  service.py
backend/src/local_meeting_notes/models/: __init__.py  records.py  session.py
backend/src/local_meeting_notes/session_workflow/: __init__.py  service.py
backend/src/local_meeting_notes/speaker_attribution/: __init__.py  service.py
backend/src/local_meeting_notes/storage/: __init__.py  database.py  mock_seed.py  repository.py  schema.py  service.py  session_state.py
backend/src/local_meeting_notes/summarizer/: __init__.py  providers.py  service.py
backend/src/local_meeting_notes/transcription_engine/: __init__.py  providers.py  service.py
backend/src/local_meeting_notes/utils/: __init__.py  placeholders.py
backend/tests/: test_export_and_briefing.py
docs/: current-status.md  roadmap.md  troubleshooting.md
docs/architecture/: phase-1-overview.md
docs/demo/: demo-walkthrough.md
docs/setup/: windows-local-dev.md
tests/: conftest.py
(+31 files in other folders)
