[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-meeting-notes"
version = "0.1.0"
description = "Windows-first local meeting notes desktop backend scaffold."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "faster-whisper>=1.0.3",
  "numpy>=1.26",
  "soundcard>=0.4.3",
  "soundfile>=0.12.1",
]

[project.scripts]
local-meeting-notes = "local_meeting_notes.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["src"]
addopts = "--basetemp=backend/data/tmp/pytest"

[tool.ruff]
line-length = 100
target-version = "py312"
