[package]
name = "local-meeting-notes"
version = "0.1.0"
description = "Tauri shell for the Local Meeting Notes scaffold."
authors = ["Codex"]
edition = "2021"

[lib]
name = "local_meeting_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.1", features = [] }
